--- a/chroni/Main.storyboard
+++ b/chroni/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Nzf-GU-lME">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wPC-WZ-j2Y">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -24,7 +24,164 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPJ-Fb-Sbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="742.5" y="-1083"/>
+            <point key="canvasLocation" x="614" y="-327"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="9eW-9L-gN1">
+            <objects>
+                <tabBarController id="wPC-WZ-j2Y" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="8We-yX-bg8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="tlO-ac-Csz" kind="relationship" relationship="viewControllers" id="J3D-hT-uIJ"/>
+                        <segue destination="eTE-6D-n6U" kind="relationship" relationship="viewControllers" id="XPA-pR-NOa"/>
+                        <segue destination="xYA-UG-fyL" kind="relationship" relationship="viewControllers" id="aVL-Ez-Fu5"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e4S-xi-LPV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-993" y="-1852"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="2oc-EI-Nen">
+            <objects>
+                <navigationController id="tlO-ac-Csz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="file-document-7.png" selectedImage="file-document-7.png" id="9b3-jo-WKA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZcP-tC-KEL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2wg-tF-ity" kind="relationship" relationship="rootViewController" id="ZqS-yF-arM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v8Y-6l-9k6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-172" y="-2222"/>
+        </scene>
+        <!--Reports View Controller-->
+        <scene sceneID="Ufk-l8-VGU">
+            <objects>
+                <viewController id="2wg-tF-ity" customClass="ReportsViewController" customModule="chroni" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="P1g-hn-vQw"/>
+                        <viewControllerLayoutGuide type="bottom" id="RqR-gK-dXn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Cje-bW-gln">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pf-Fz-5KX">
+                                <rect key="frame" x="271" y="502" width="59" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Open"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aliquot" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdi-z0-oLG">
+                                <rect key="frame" x="20" y="89" width="560" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="xF3-3K-IrW">
+                                <rect key="frame" x="20" y="148" width="560" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zca-Mm-GNm">
+                                <rect key="frame" x="20" y="217" width="560" height="216"/>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cdi-z0-oLG" firstAttribute="leading" secondItem="Cje-bW-gln" secondAttribute="leadingMargin" id="1NC-NE-xZ6"/>
+                            <constraint firstItem="zca-Mm-GNm" firstAttribute="centerX" secondItem="Cje-bW-gln" secondAttribute="centerX" id="4TC-7I-dwj"/>
+                            <constraint firstItem="xF3-3K-IrW" firstAttribute="centerX" secondItem="Cje-bW-gln" secondAttribute="centerX" id="8k0-Q7-TVA"/>
+                            <constraint firstItem="cdi-z0-oLG" firstAttribute="trailing" secondItem="Cje-bW-gln" secondAttribute="trailingMargin" id="FqU-4n-vba"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zca-Mm-GNm" secondAttribute="trailing" id="GDW-AG-fM1"/>
+                            <constraint firstItem="xF3-3K-IrW" firstAttribute="top" secondItem="cdi-z0-oLG" secondAttribute="bottom" constant="25" id="GmQ-WM-fGC"/>
+                            <constraint firstItem="cdi-z0-oLG" firstAttribute="centerX" secondItem="Cje-bW-gln" secondAttribute="centerX" id="HXl-5z-NIp"/>
+                            <constraint firstItem="zca-Mm-GNm" firstAttribute="leading" secondItem="Cje-bW-gln" secondAttribute="leadingMargin" id="b0B-RY-7I7"/>
+                            <constraint firstItem="8pf-Fz-5KX" firstAttribute="centerX" secondItem="Cje-bW-gln" secondAttribute="centerX" id="bct-pv-lVz"/>
+                            <constraint firstItem="8pf-Fz-5KX" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zca-Mm-GNm" secondAttribute="bottom" constant="15" id="bmt-SF-Igy"/>
+                            <constraint firstItem="zca-Mm-GNm" firstAttribute="top" secondItem="xF3-3K-IrW" secondAttribute="bottom" priority="750" constant="25" id="fUm-4A-5v9"/>
+                            <constraint firstItem="xF3-3K-IrW" firstAttribute="leading" secondItem="Cje-bW-gln" secondAttribute="leadingMargin" id="htC-hm-T2P"/>
+                            <constraint firstItem="cdi-z0-oLG" firstAttribute="top" secondItem="P1g-hn-vQw" secondAttribute="bottom" constant="25" id="n9B-v9-gBW"/>
+                            <constraint firstItem="RqR-gK-dXn" firstAttribute="top" secondItem="8pf-Fz-5KX" secondAttribute="bottom" constant="8" id="nmQ-hf-4VR"/>
+                            <constraint firstItem="xF3-3K-IrW" firstAttribute="trailing" secondItem="Cje-bW-gln" secondAttribute="trailingMargin" id="wjy-CQ-O7K"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="o5y-BE-RXb">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="Dpf-R6-cVr">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Aliquot"/>
+                                <segment title="Report Settings"/>
+                            </segments>
+                            <connections>
+                                <action selector="segmentToggle:" destination="2wg-tF-ity" eventType="valueChanged" id="ULK-ub-thO"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="picker" destination="zca-Mm-GNm" id="7Dl-jh-Min"/>
+                        <outlet property="titleText" destination="cdi-z0-oLG" id="Xcb-Ro-VrV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W7a-bR-JhH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="527" y="-2222"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="xP1-Hm-Lve">
+            <objects>
+                <viewController id="xYA-UG-fyL" customClass="ProfileViewController" customModule="chroni" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cdB-Ev-my0"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZLe-YD-fO4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gNK-rw-k5f">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="circle-user-7.png" selectedImage="circle-user-7.png" id="HHu-cB-t7P"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pYE-pl-U4z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-172" y="-1450"/>
+        </scene>
+        <!--History Table View Controller-->
+        <scene sceneID="ghE-Qg-Do5">
+            <objects>
+                <tableViewController id="eTE-6D-n6U" customClass="HistoryTableViewController" customModule="chroni" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="1ha-Ut-5UE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="H8W-NO-lxC">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H8W-NO-lxC" id="EbS-l6-Q0E">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="eTE-6D-n6U" id="gXR-Pu-tXu"/>
+                            <outlet property="delegate" destination="eTE-6D-n6U" id="kpU-le-VbS"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" systemItem="history" id="HRX-TX-Ehx"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fzL-zG-iS0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-993" y="-1096"/>
         </scene>
         <!--Home-->
         <scene sceneID="YUx-BT-Bt8">
@@ -215,6 +372,10 @@
             <point key="canvasLocation" x="-1059" y="-326"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="circle-user-7.png" width="30" height="30"/>
+        <image name="file-document-7.png" width="30" height="30"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="sc5-OI-iLr"/>
     </inferredMetricsTieBreakers>
