--- a/chroni/Main.storyboard
+++ b/chroni/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="nnn-bH-MXU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rNx-qD-klN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -445,7 +445,7 @@
                                         </variation>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.62745098040000002" green="0.76470588240000004" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="lEp-Cc-EuY" firstAttribute="centerY" secondItem="eKP-rj-U0g" secondAttribute="centerY" id="0fL-Z9-Vud"/>
                                     <constraint firstItem="lEp-Cc-EuY" firstAttribute="centerX" secondItem="eKP-rj-U0g" secondAttribute="centerX" id="Bvr-75-vJY"/>
@@ -525,7 +525,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.62745098040000002" green="0.76470588240000004" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="qBu-yX-10h" firstAttribute="centerX" secondItem="e7g-iL-zHJ" secondAttribute="centerX" id="2bY-tu-tva"/>
                                     <constraint firstItem="qBu-yX-10h" firstAttribute="top" relation="greaterThanOrEqual" secondItem="3zU-FO-r72" secondAttribute="bottom" constant="10" id="8fO-ob-WVr"/>
@@ -550,6 +550,7 @@
                             <constraint firstItem="e7g-iL-zHJ" firstAttribute="leading" secondItem="ZWa-mb-gkT" secondAttribute="leadingMargin" id="bKX-iJ-Tvd"/>
                             <constraint firstItem="eO0-GB-yx8" firstAttribute="trailing" secondItem="ZWa-mb-gkT" secondAttribute="trailingMargin" id="dGW-kp-Qab"/>
                             <constraint firstItem="VSh-hS-CtD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eO0-GB-yx8" secondAttribute="bottom" constant="10" id="dTh-qg-ifh"/>
+                            <constraint firstItem="eKP-rj-U0g" firstAttribute="top" secondItem="I5P-ON-3Ln" secondAttribute="bottom" id="dpK-8D-0wA"/>
                             <constraint firstItem="eKP-rj-U0g" firstAttribute="centerX" secondItem="ZWa-mb-gkT" secondAttribute="centerX" id="klg-O0-2hc"/>
                             <constraint firstItem="eO0-GB-yx8" firstAttribute="centerX" secondItem="ZWa-mb-gkT" secondAttribute="centerX" id="xPw-ES-OCH"/>
                             <constraint firstItem="eKP-rj-U0g" firstAttribute="leading" secondItem="ZWa-mb-gkT" secondAttribute="leadingMargin" id="ycT-zm-GJq"/>
